--- a/layout.css
+++ b/layout.css
@@ -2,14 +2,16 @@
 body
 {
 	background-color: grey;
+	color : white;
+	padding:40px;
 }
 
-canvas{
-
+a{
+	margin:30px;
+	padding:30px;
 	border: 1px solid #000000;
 	background-color: floralwhite;
-/*
-	margin-top: 50px;
-	margin-left: 200px;
-*/
+	color:black;
+	text-decoration: none;
+  font-size: 40px;
 }
